@@ -1,5 +1,6 @@
-package com.startingblue.fourtooncookie.converter;
+package com.startingblue.fourtooncookie.converter.jpa;
 
+import com.startingblue.fourtooncookie.converter.exception.ConversionException;
 import jakarta.persistence.AttributeConverter;
 import jakarta.persistence.Converter;
 import org.springframework.stereotype.Component;
@@ -12,17 +13,21 @@ import java.util.stream.Collectors;
 @Component
 public class LongListToStringConverter implements AttributeConverter<List<Long>, String> {
 
-    private static final String EMPTY_LIST = "";
+    private static final String EMPTY_LIST_STRING = "";
 
     @Override
     public String convertToDatabaseColumn(List<Long> attribute) {
         if (isAttributeEmpty(attribute)) {
-            return EMPTY_LIST;
+            return EMPTY_LIST_STRING;
         }
 
-        return attribute.stream()
-                .map(String::valueOf)
-                .collect(Collectors.joining(","));
+        try {
+            return attribute.stream()
+                    .map(String::valueOf)
+                    .collect(Collectors.joining(","));
+        } catch (Exception e) {
+            throw new ConversionException("Error converting List<Long> to String", e);
+        }
     }
 
     @Override
@@ -30,9 +35,14 @@ public class LongListToStringConverter implements AttributeConverter<List<Long>,
         if (isDBColumnEmpty(dbData)) {
             return List.of();
         }
-        return Arrays.stream(dbData.split(","))
-                .map(Long::valueOf)
-                .collect(Collectors.toList());
+
+        try {
+            return Arrays.stream(dbData.split(","))
+                    .map(Long::valueOf)
+                    .toList();
+        } catch (NumberFormatException e) {
+            throw new ConversionException("Error converting String to List<Long>", e);
+        }
     }
 
     private static boolean isAttributeEmpty(List<Long> attribute) {
